[package]
name = "scl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.1", features = ["cargo", "env", "unicode", "wrap_help"] }
conventional = "0.5.0"
lazy_static = "1.4.0"
regex = "1.7.1"
reqwest = { version = "0.11.13", features = ["json"]}
semver = "1.0.16"
serde = { version = "1.0.152", features = ["derive"]}
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros"]}
