[package]
name = "scl"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.clap]
version = "4.1.1"
features = ["cargo", "unicode", "wrap_help"]

[dependencies.git-conventional]
version = "0.12.4"
default_features = false

[dependencies.git2]
version = "0.17.2"
default_features = false

[dependencies.semver]
version = "1.0.18"

[dependencies.serde]
version = "1.0.182"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.104"
